Minor spacing issues fixed

--- a/client/src/css/CourseSelectionList.module.scss
+++ b/client/src/css/CourseSelectionList.module.scss
@@ -123,7 +123,7 @@
 
 	.searchColumn {
 		display: flex;
-		min-height: 1.75rem;
+		min-height: 2.25rem;
 
 		&:focus-within .codeText {
 			display: none;
